--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div>
             <h1> Naughts & Crosses</h1>
         </div>
+        <h4 class="subheader"> Player 1 Turn</h4>
 
         <div class="grid">
             <div class="cell"><button class="cell-button" id="0"></button></div>
